--- a/wcl-tooltip.css
+++ b/wcl-tooltip.css
@@ -6,6 +6,12 @@
     border: 1px solid #ccc;
     background-color: #fff;
     text-align: center;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    box-shadow:rgba(113, 135, 164, 0.05) 0 0 10px 1px;
+    -webkit-box-shadow:rgba(113, 135, 164, 0.05) 0 0 10px 1px;
+    -moz-box-shadow:rgba(113, 135, 164, 0.05) 0 0 10px 1px;
 }
 
 .wcl-tooltip-top:before {
