--- a/wcl-tooltip.css
+++ b/wcl-tooltip.css
@@ -5,7 +5,6 @@
     height: auto;
     border: 1px solid #ccc;
     background-color: #fff;
-    text-align: center;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     border-radius: 2px;
@@ -115,23 +114,20 @@
 }
 
 .wcl-tooltip-header {
-    display: table-cell;
-    vertical-align: middle;
-    height: 35px;
-    padding: 0 15px;
+    text-align: left;
+    padding: 5px 15px;
+    background-color: #EEEEEE;
+    border-bottom: 1px solid rgba(0, 0, 0, .1);
+    -webkit-box-shadow: rgba(255, 255, 255, .5) 0 1px 0;
+    -moz-box-shadow: rgba(255, 255, 255, .5) 0 1px 0;
+    box-shadow: rgba(255, 255, 255, .5) 0 1px 0;
 }
 .wcl-tooltip-title {
-    display: table-cell;
-}
-.wcl-tooltip-title h1{
     font-size: medium;
     margin: 0;
-}
-.wcl-tooltip-close-container {
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin: 8px 12px;
+    display: inline;
 }
 .wcl-tooltip-close {
+    float: right;
+    margin-top: 2px;
 }
