--- a/wcl-tooltip.css
+++ b/wcl-tooltip.css
@@ -1,133 +1,167 @@
-
 .wcl-tooltip {
-    position: absolute;
-    width: auto;
-    height: auto;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
-    box-shadow:rgba(113, 135, 164, 0.05) 0 0 10px 1px;
-    -webkit-box-shadow:rgba(113, 135, 164, 0.05) 0 0 10px 1px;
-    -moz-box-shadow:rgba(113, 135, 164, 0.05) 0 0 10px 1px;
-}
-
-.wcl-tooltip-top:before {
-    content: "";
-    position: absolute;
-    bottom: -11px;
-    left: 50%;
-    margin-left: -10px;
-    width: 0;
-    height: 0;
-    border-top: 10px solid #ccc;
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-}
-.wcl-tooltip-top:after {
-    content: "";
-    position: absolute;
-    bottom: -10px;
-    left: 50%;
-    margin-left: -10px;
-    width: 0;
-    height: 0;
-    border-top: 10px solid #fff;
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-}
-
-.wcl-tooltip-bottom:before {
-    content: "";
-    position: absolute;
-    top: -11px;
-    left: 50%;
-    margin-left: -10px;
-    width: 0;
-    height: 0;
-    border-bottom: 10px solid #ccc;
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-}
-.wcl-tooltip-bottom:after {
-    content: "";
-    position: absolute;
-    top: -10px;
-    left: 50%;
-    margin-left: -10px;
-    width: 0;
-    height: 0;
-    border-bottom: 10px solid #fff;
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-}
-
-.wcl-tooltip-right:before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: -11px;
-    margin-top: -10px;
-    width: 0;
-    height: 0;
-    border-right: 10px solid #ccc;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
-}
-.wcl-tooltip-right:after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: -10px;
-    margin-top: -10px;
-    width: 0;
-    height: 0;
-    border-right: 10px solid #fff;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
-}
-
-.wcl-tooltip-left:before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    right: -11px;
-    margin-top: -10px;
-    width: 0;
-    height: 0;
-    border-left: 10px solid #ccc;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
-}
-.wcl-tooltip-left:after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    right: -10px;
-    margin-top: -10px;
-    width: 0;
-    height: 0;
-    border-left: 10px solid #fff;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
-}
+  position: absolute;
+  width: auto;
+  height: auto;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  border-radius: 2px;
+  -webkit-box-shadow: rgba(113, 135, 164, 0.05) 0 0 10px 1px;
+  -moz-box-shadow: rgba(113, 135, 164, 0.05) 0 0 10px 1px;
+  box-shadow: rgba(113, 135, 164, 0.05) 0 0 10px 1px; }
 
 .wcl-tooltip-header {
-    text-align: left;
-    padding: 5px 15px;
-    background-color: #EEEEEE;
-    border-bottom: 1px solid rgba(0, 0, 0, .1);
-    -webkit-box-shadow: rgba(255, 255, 255, .5) 0 1px 0;
-    -moz-box-shadow: rgba(255, 255, 255, .5) 0 1px 0;
-    box-shadow: rgba(255, 255, 255, .5) 0 1px 0;
-}
+  text-align: left;
+  padding: 5px 15px;
+  background-color: #EEEEEE;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: rgba(255, 255, 255, 0.5) 0 1px 0;
+  -moz-box-shadow: rgba(255, 255, 255, 0.5) 0 1px 0;
+  box-shadow: rgba(255, 255, 255, 0.5) 0 1px 0; }
+
 .wcl-tooltip-title {
-    font-size: medium;
-    margin: 0;
-    display: inline;
-}
+  font-size: medium;
+  margin: 0;
+  display: inline; }
+
 .wcl-tooltip-close {
-    float: right;
-    margin-top: 2px;
-}
+  float: right;
+  margin-top: 2px; }
+
+.wcl-tooltip-top:before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  bottom: -11px;
+  left: 50%;
+  margin-left: -10px;
+  border-top: 10px solid #ccc;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent; }
+
+.wcl-tooltip-top:after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  bottom: -10px;
+  left: 50%;
+  margin-left: -10px;
+  border-top: 10px solid #fff;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent; }
+
+.wcl-tooltip-right:before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  top: 50%;
+  left: -11px;
+  margin-top: -10px;
+  border-right: 10px solid #ccc;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent; }
+
+.wcl-tooltip-right:after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  top: 50%;
+  left: -10px;
+  margin-top: -10px;
+  border-right: 10px solid #fff;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent; }
+
+.wcl-tooltip-bottom:before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  top: -11px;
+  left: 50%;
+  margin-left: -10px;
+  border-bottom: 10px solid #ccc;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent; }
+
+.wcl-tooltip-bottom:after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  top: -10px;
+  left: 50%;
+  margin-left: -10px;
+  border-bottom: 10px solid #fff;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent; }
+
+.wcl-tooltip-left:before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  top: 50%;
+  right: -11px;
+  margin-top: -10px;
+  border-left: 10px solid #ccc;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent; }
+
+.wcl-tooltip-left:after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  top: 50%;
+  right: -10px;
+  margin-top: -10px;
+  border-left: 10px solid #fff;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent; }
+
+.wcl-tooltip-theme-dark {
+  background-color: #212121;
+  color: #e9e9e9;
+  font-size: small;
+  padding: 5px 9px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  border-radius: 3px; }
+  .wcl-tooltip-theme-dark:before, .wcl-tooltip-theme-dark:after {
+    border-width: 7px; }
+  .wcl-tooltip-theme-dark.wcl-tooltip-top:before {
+    bottom: -8px;
+    margin-left: -8px; }
+  .wcl-tooltip-theme-dark.wcl-tooltip-top:after {
+    bottom: -7px;
+    margin-left: -8px;
+    border-top-color: #212121; }
+  .wcl-tooltip-theme-dark.wcl-tooltip-right:before {
+    left: -8px;
+    margin-top: -8px; }
+  .wcl-tooltip-theme-dark.wcl-tooltip-right:after {
+    left: -7px;
+    margin-top: -8px;
+    border-right-color: #212121; }
+  .wcl-tooltip-theme-dark.wcl-tooltip-bottom:before {
+    top: -8px;
+    margin-left: -8px; }
+  .wcl-tooltip-theme-dark.wcl-tooltip-bottom:after {
+    top: -7px;
+    margin-left: -8px;
+    border-bottom-color: #212121; }
+  .wcl-tooltip-theme-dark.wcl-tooltip-left:before {
+    right: -8px;
+    margin-top: -8px; }
+  .wcl-tooltip-theme-dark.wcl-tooltip-left:after {
+    right: -7px;
+    margin-top: -8px;
+    border-left-color: #212121; }
