--- a/wcl-tooltip.scss
+++ b/wcl-tooltip.scss
@@ -1,133 +1,181 @@
+@mixin border-radius($radius) {
+  -webkit-border-radius: $radius;
+  -moz-border-radius: $radius;
+  -ms-border-radius: $radius;
+  border-radius: $radius;
+}
+
+@mixin box-shadow($color) {
+  -webkit-box-shadow:$color 0 0 10px 1px;
+  -moz-box-shadow:$color 0 0 10px 1px;
+  box-shadow:$color 0 0 10px 1px;
+}
 
 .wcl-tooltip {
-    position: absolute;
-    width: auto;
-    height: auto;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
-    box-shadow:rgba(113, 135, 164, 0.05) 0 0 10px 1px;
-    -webkit-box-shadow:rgba(113, 135, 164, 0.05) 0 0 10px 1px;
-    -moz-box-shadow:rgba(113, 135, 164, 0.05) 0 0 10px 1px;
-}
-
-.wcl-tooltip-top:before {
-    content: "";
-    position: absolute;
-    bottom: -11px;
-    left: 50%;
-    margin-left: -10px;
-    width: 0;
-    height: 0;
-    border-top: 10px solid #ccc;
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-}
-.wcl-tooltip-top:after {
-    content: "";
-    position: absolute;
-    bottom: -10px;
-    left: 50%;
-    margin-left: -10px;
-    width: 0;
-    height: 0;
-    border-top: 10px solid #fff;
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-}
-
-.wcl-tooltip-bottom:before {
-    content: "";
-    position: absolute;
-    top: -11px;
-    left: 50%;
-    margin-left: -10px;
-    width: 0;
-    height: 0;
-    border-bottom: 10px solid #ccc;
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-}
-.wcl-tooltip-bottom:after {
-    content: "";
-    position: absolute;
-    top: -10px;
-    left: 50%;
-    margin-left: -10px;
-    width: 0;
-    height: 0;
-    border-bottom: 10px solid #fff;
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-}
-
-.wcl-tooltip-right:before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: -11px;
-    margin-top: -10px;
-    width: 0;
-    height: 0;
-    border-right: 10px solid #ccc;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
-}
-.wcl-tooltip-right:after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: -10px;
-    margin-top: -10px;
-    width: 0;
-    height: 0;
-    border-right: 10px solid #fff;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
-}
-
-.wcl-tooltip-left:before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    right: -11px;
-    margin-top: -10px;
-    width: 0;
-    height: 0;
-    border-left: 10px solid #ccc;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
-}
-.wcl-tooltip-left:after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    right: -10px;
-    margin-top: -10px;
-    width: 0;
-    height: 0;
-    border-left: 10px solid #fff;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
+  position: absolute;
+  width: auto;
+  height: auto;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  @include border-radius(2px);
+  @include box-shadow(rgba(113, 135, 164, 0.05))
 }
 
 .wcl-tooltip-header {
-    text-align: left;
-    padding: 5px 15px;
-    background-color: #EEEEEE;
-    border-bottom: 1px solid rgba(0, 0, 0, .1);
-    -webkit-box-shadow: rgba(255, 255, 255, .5) 0 1px 0;
-    -moz-box-shadow: rgba(255, 255, 255, .5) 0 1px 0;
-    box-shadow: rgba(255, 255, 255, .5) 0 1px 0;
+  text-align: left;
+  padding: 5px 15px;
+  background-color: #EEEEEE;
+  border-bottom: 1px solid rgba(0, 0, 0, .1);
+  -webkit-box-shadow: rgba(255, 255, 255, .5) 0 1px 0;
+  -moz-box-shadow: rgba(255, 255, 255, .5) 0 1px 0;
+  box-shadow: rgba(255, 255, 255, .5) 0 1px 0;
 }
 .wcl-tooltip-title {
-    font-size: medium;
-    margin: 0;
-    display: inline;
+  font-size: medium;
+  margin: 0;
+  display: inline;
 }
 .wcl-tooltip-close {
-    float: right;
-    margin-top: 2px;
+  float: right;
+  margin-top: 2px;
+}
+
+.wcl-tooltip-body {
+
+}
+
+@mixin arrow() {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+}
+
+.wcl-tooltip-top:before {
+  @include arrow;
+  bottom: -11px;
+  left: 50%;
+  margin-left: -10px;
+  border-top: 10px solid #ccc;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+}
+.wcl-tooltip-top:after {
+  @include arrow;
+  bottom: -10px;
+  left: 50%;
+  margin-left: -10px;
+  border-top: 10px solid #fff;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+}
+
+.wcl-tooltip-right:before {
+  @include arrow;
+  top: 50%;
+  left: -11px;
+  margin-top: -10px;
+  border-right: 10px solid #ccc;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+}
+.wcl-tooltip-right:after {
+  @include arrow;
+  top: 50%;
+  left: -10px;
+  margin-top: -10px;
+  border-right: 10px solid #fff;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+}
+
+.wcl-tooltip-bottom:before {
+  @include arrow;
+  top: -11px;
+  left: 50%;
+  margin-left: -10px;
+  border-bottom: 10px solid #ccc;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+}
+.wcl-tooltip-bottom:after {
+  @include arrow;
+  top: -10px;
+  left: 50%;
+  margin-left: -10px;
+  border-bottom: 10px solid #fff;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+}
+
+.wcl-tooltip-left:before {
+  @include arrow;
+  top: 50%;
+  right: -11px;
+  margin-top: -10px;
+  border-left: 10px solid #ccc;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+}
+.wcl-tooltip-left:after {
+  @include arrow;
+  top: 50%;
+  right: -10px;
+  margin-top: -10px;
+  border-left: 10px solid #fff;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+}
+
+.wcl-tooltip-theme-dark {
+  $dark-color: #212121;
+  background-color: $dark-color;
+  color: #e9e9e9;
+  font-size: small;
+  padding: 5px 9px;
+  @include border-radius(3px);
+
+  &:before, &:after {
+    border-width: 7px;
+  }
+
+  &.wcl-tooltip-top:before {
+    bottom: -8px;
+    margin-left: -8px;
+  }
+  &.wcl-tooltip-top:after {
+    bottom: -7px;
+    margin-left: -8px;
+    border-top-color: $dark-color;
+  }
+
+  &.wcl-tooltip-right:before {
+    left: -8px;
+    margin-top: -8px;
+  }
+  &.wcl-tooltip-right:after {
+    left: -7px;
+    margin-top: -8px;
+    border-right-color: $dark-color;
+  }
+
+  &.wcl-tooltip-bottom:before {
+    top: -8px;
+    margin-left: -8px;
+  }
+  &.wcl-tooltip-bottom:after {
+    top: -7px;
+    margin-left: -8px;
+    border-bottom-color: $dark-color;
+  }
+
+  &.wcl-tooltip-left:before {
+    right: -8px;
+    margin-top: -8px;
+  }
+  &.wcl-tooltip-left:after {
+    right: -7px;
+    margin-top: -8px;
+    border-left-color: $dark-color;
+  }
 }
