--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>wcl-tooltip</title>
+  <link href="stylesheets/syntax.css" media="screen, projection" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
