--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,12 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <title>wcl-tooltip</title>
+  <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.2/material.blue-orange.min.css" />
+  <script src="https://storage.googleapis.com/code.getmdl.io/1.0.2/material.min.js"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link href="stylesheets/syntax.css" media="screen, projection" rel="stylesheet" type="text/css" />
+
+  <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+  <!--[if IE]>
+  <link href="stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+  <![endif]-->
 </head>
 <body>
 
-{{content}}
+<!-- No header, and the drawer stays open on larger screens (fixed drawer). -->
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer
+            mdl-layout--overlay-drawer-button">
+  <div class="mdl-layout__drawer">
+    <span class="mdl-layout-title">wcl-tooltip</span>
+    <a class="mdl-button mdl-js-button" href="https://github.com/kawausokun/wcl-tooltip">View on Github</a>
 
+  </div>
+  <main class="mdl-layout__content">
+    <div class="page-content">{{content}}</div>
+  </main>
+</div>
+
+<script src="javascripts/bundle.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
