--- a/stylesheets/sass/screen.scss
+++ b/stylesheets/sass/screen.scss
@@ -5,6 +5,15 @@
 
 @import "../../node_modules/wcl-tooltip/wcl-tooltip";
 
+h2 {
+  border-bottom: 1px solid #d0d0d0;
+  width: 80%;
+}
+
+.page-content {
+  margin-left: 30px;
+}
+
 #demo-container {
   margin: 20px 0;
 }
