--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -14,9 +14,10 @@
   -webkit-box-shadow: rgba(113, 135, 164, 0.05) 0 0 10px 1px;
   -moz-box-shadow: rgba(113, 135, 164, 0.05) 0 0 10px 1px;
   box-shadow: rgba(113, 135, 164, 0.05) 0 0 10px 1px;
+  z-index: 99;
 }
 
-/* line 22, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 23, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-header {
   text-align: left;
   padding: 5px 15px;
@@ -27,20 +28,20 @@
   box-shadow: rgba(255, 255, 255, 0.5) 0 1px 0;
 }
 
-/* line 31, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 32, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-title {
   font-size: medium;
   margin: 0;
   display: inline;
 }
 
-/* line 36, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 37, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-close {
   float: right;
   margin-top: 2px;
 }
 
-/* line 45, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 46, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip:before, .wcl-tooltip:after {
   content: "";
   position: absolute;
@@ -49,163 +50,163 @@
   margin: -10px;
 }
 
-/* line 53, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 54, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-top:before, .wcl-tooltip-top-left:before, .wcl-tooltip-top-right:before {
   bottom: -1px;
 }
 
-/* line 54, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 55, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-bottom:before, .wcl-tooltip-bottom-left:before, .wcl-tooltip-bottom-right:before {
   top: -1px;
 }
 
-/* line 55, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 56, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-top:before, .wcl-tooltip-bottom:before {
   left: 50%;
 }
 
-/* line 56, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 57, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-top-left:before, .wcl-tooltip-bottom-left:before {
   left: 15px;
 }
 
-/* line 57, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 58, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-top-right:before, .wcl-tooltip-bottom-right:before {
   right: 15px;
 }
 
-/* line 59, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 60, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-left:before, .wcl-tooltip-left-top:before, .wcl-tooltip-left-bottom:before {
   right: -1px;
 }
 
-/* line 60, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 61, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-right:before, .wcl-tooltip-right-top:before, .wcl-tooltip-right-bottom:before {
   left: -1px;
 }
 
-/* line 61, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 62, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-left:before, .wcl-tooltip-right:before {
   top: 50%;
 }
 
-/* line 62, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 63, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-left-top:before, .wcl-tooltip-right-top:before {
   bottom: 15px;
 }
 
-/* line 63, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 64, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-left-bottom:before, .wcl-tooltip-right-bottom:before {
   top: 15px;
 }
 
-/* line 65, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 66, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-top:after, .wcl-tooltip-top-left:after, .wcl-tooltip-top-right:after {
   bottom: 0;
 }
 
-/* line 66, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 67, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-bottom:after, .wcl-tooltip-bottom-left:after, .wcl-tooltip-bottom-right:after {
   top: 0;
 }
 
-/* line 67, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 68, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-top:after, .wcl-tooltip-bottom:after {
   left: 50%;
 }
 
-/* line 68, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 69, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-top-left:after, .wcl-tooltip-bottom-left:after {
   left: 15px;
 }
 
-/* line 69, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 70, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-top-right:after, .wcl-tooltip-bottom-right:after {
   right: 15px;
 }
 
-/* line 71, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 72, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-left:after, .wcl-tooltip-left-top:after, .wcl-tooltip-left-bottom:after {
   right: 0;
 }
 
-/* line 72, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 73, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-right:after, .wcl-tooltip-right-top:after, .wcl-tooltip-right-bottom:after {
   left: 0;
 }
 
-/* line 73, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 74, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-left:after, .wcl-tooltip-right:after {
   top: 50%;
 }
 
-/* line 74, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 75, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-left-top:after, .wcl-tooltip-right-top:after {
   bottom: 15px;
 }
 
-/* line 75, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 76, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-left-bottom:after, .wcl-tooltip-right-bottom:after {
   top: 15px;
 }
 
-/* line 77, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 78, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-top:before, .wcl-tooltip-top-left:before, .wcl-tooltip-top-right:before {
   border-top: 10px solid #ccc;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
 }
 
-/* line 82, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 83, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-top:after, .wcl-tooltip-top-left:after, .wcl-tooltip-top-right:after {
   border-top: 10px solid #fff;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
 }
 
-/* line 88, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 89, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-right:before, .wcl-tooltip-right-top:before, .wcl-tooltip-right-bottom:before {
   border-right: 10px solid #ccc;
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
 }
 
-/* line 93, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 94, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-right:after, .wcl-tooltip-right-top:after, .wcl-tooltip-right-bottom:after {
   border-right: 10px solid #fff;
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
 }
 
-/* line 99, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 100, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-bottom:before, .wcl-tooltip-bottom-left:before, .wcl-tooltip-bottom-right:before {
   border-bottom: 10px solid #ccc;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
 }
 
-/* line 104, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 105, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-bottom:after, .wcl-tooltip-bottom-left:after, .wcl-tooltip-bottom-right:after {
   border-bottom: 10px solid #fff;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
 }
 
-/* line 110, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 111, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-left:before, .wcl-tooltip-left-top:before, .wcl-tooltip-left-bottom:before {
   border-left: 10px solid #ccc;
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
 }
 
-/* line 115, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 116, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-left:after, .wcl-tooltip-left-top:after, .wcl-tooltip-left-bottom:after {
   border-left: 10px solid #fff;
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
 }
 
-/* line 121, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 122, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-theme-dark {
   background-color: #212121;
   color: #e9e9e9;
@@ -216,29 +217,29 @@
   -ms-border-radius: 3px;
   border-radius: 3px;
 }
-/* line 129, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 130, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-theme-dark:before, .wcl-tooltip-theme-dark:after {
   border-width: 7px;
   margin: -7px;
 }
-/* line 134, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 135, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-theme-dark.wcl-tooltip-top:after, .wcl-tooltip-theme-dark.wcl-tooltip-top-left:after, .wcl-tooltip-theme-dark.wcl-tooltip-top-right:after {
   border-top-color: #212121;
 }
-/* line 138, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 139, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-theme-dark.wcl-tooltip-right:after, .wcl-tooltip-theme-dark.wcl-tooltip-right-top:after, .wcl-tooltip-theme-dark.wcl-tooltip-right-bottom:after {
   border-right-color: #212121;
 }
-/* line 142, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 143, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-theme-dark.wcl-tooltip-bottom:after, .wcl-tooltip-theme-dark.wcl-tooltip-bottom-left:after, .wcl-tooltip-theme-dark.wcl-tooltip-bottom-right:after {
   border-bottom-color: #212121;
 }
-/* line 146, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 147, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip-theme-dark.wcl-tooltip-left:after, .wcl-tooltip-theme-dark.wcl-tooltip-left-top:after, .wcl-tooltip-theme-dark.wcl-tooltip-left-bottom:after {
   border-left-color: #212121;
 }
 
-/* line 152, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
+/* line 153, ../node_modules/wcl-tooltip/wcl-tooltip.scss */
 .wcl-tooltip.wcl-tooltip-noarrow:before, .wcl-tooltip.wcl-tooltip-noarrow:after {
   content: none;
 }
