--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -246,39 +246,52 @@
 
 /* line 8, sass/screen.scss */
 h2 {
-  border-bottom: 1px solid #d0d0d0;
   width: 80%;
+  border-bottom: 1px solid #d0d0d0;
+  line-height: 1.2em;
 }
 
-/* line 13, sass/screen.scss */
+/* line 14, sass/screen.scss */
+pre {
+  width: 75%;
+  padding: 10px;
+  background-color: #f8f8f8;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  border-radius: 4px;
+  overflow-x: scroll;
+}
+
+/* line 22, sass/screen.scss */
 .page-content {
   margin-left: 30px;
 }
 
-/* line 17, sass/screen.scss */
+/* line 26, sass/screen.scss */
 #demo-container {
   margin: 20px 0;
 }
 
-/* line 22, sass/screen.scss */
+/* line 31, sass/screen.scss */
 #tooltip-menu-content ul {
   margin: 2px 0;
   padding: 0;
   list-style-image: none;
   list-style-type: none;
 }
-/* line 29, sass/screen.scss */
+/* line 38, sass/screen.scss */
 #tooltip-menu-content a {
   width: 200px;
   display: block;
   text-align: center;
 }
-/* line 34, sass/screen.scss */
+/* line 43, sass/screen.scss */
 #tooltip-menu-content a:hover {
   background-color: #dbdbdb;
 }
 
-/* line 40, sass/screen.scss */
+/* line 49, sass/screen.scss */
 #tooltip-square {
   width: 50px;
   height: 50px;
