--- a/wcl-tooltip.css
+++ b/wcl-tooltip.css
@@ -1,5 +1,5 @@
 .wcl-tooltip {
-  position: fixed;
+  position: absolute;
   border: 1px solid #ccc;
   background-color: #fff;
   -webkit-border-radius: 2px;
